# seneca

./: .gitignore  CONTRIBUTING.md  README.md
.github/workflows/: main.yml
issuer/centralized/: .env.example  authServer.js  cryptoUtils.js  issuer.js  package.json  tokenUtils.js
issuer/centralized/certs/: demo_private.pem  demo_public.pem
issuer/decentralized/: Cargo.toml  README.md
issuer/decentralized/dcsm_bbs_plus/: Cargo.toml  README.md
issuer/decentralized/dcsm_bbs_plus/src/: bbs_plus.rs  dkg.rs  helpers.rs  keygen.rs  lib.rs  logger.rs  main.rs  sign.rs
issuer/decentralized/dcsm_bbs_plus/src/utils/: build.rs
issuer/decentralized/dcsm_bbs_plus/tests/: bbs_plus_tests.rs  dkg_tests.rs  helper_tests.rs  keygen_tests.rs
issuer/decentralized/frost/: Cargo.toml  docker-compose.yml
issuer/decentralized/frost/keys/: 1_key.txt  2_key.txt  3_key.txt  4_key.txt  5_key.txt
issuer/decentralized/frost/src/: helpers.rs  keygen.rs  main.rs  sign.rs
issuer/decentralized/src/: helpers.rs  keygen.rs  main.rs  sign.rs
usecases/resume/: .env.docker  .env.example  Dockerfile  README.md  docker-compose.yml  next-auth-d.ts  next.config.js  ngrok.yaml  package.json  tsconfig.json
usecases/resume/prisma/: schema.prisma
usecases/resume/prisma/migrations/20240511145245_initialize/: migration.sql
usecases/resume/redis-pub-sub/: package.json  server.js
usecases/resume/src/: middleware.ts
usecases/resume/src/app/: layout.tsx
usecases/resume/src/components/: app.tsx  auth.tsx  company-home.tsx  company-job-applicants-list.tsx  company-job-listing-view.tsx  content.tsx  create-cv-modal.tsx  create-job-listing.tsx  header-actions.tsx  job-description-preview.tsx  jobs-list.tsx  jobs.tsx  menu.tsx  modal-select-cv-job.tsx  my-lib-content.tsx  nav.tsx  resume-card.tsx  resume-preview-modal.tsx  resume.tsx  upload-file.tsx  user-job-applications-list.tsx  user-job-applications.tsx
usecases/resume/src/db/: JWTAuthentication.ts  cache.ts  company-db.ts  cvs.ts  job-applications.ts  jobs-db.ts  seedDB.ts  users-db.ts
usecases/resume/src/lib/: cryptoUtils.js  generatePDF.js  helpers.ts  issuer-config.ts  schema.ts  server-side-session.ts  useFormStore.ts  useWebsocket.ts  verifier-config.ts  walt-id-test.js
usecases/resume/web/: package.json
usecases/resume/web/components/: BurgerMenu.tsx  Footer.tsx  Layout.tsx
usecases/resume/web/pages/: _app.tsx  contact.tsx  demos.tsx  index.tsx  research.tsx
usecases/resume/web/styles/: BurgerMenu.module.css  Footer.module.css  Layout.module.css  globals.css
usecases/resume/web/theme/: index.tsx
usecases/resume/websocket-server/: package.json  server.js
(+46 files in other folders)
