[package]
name = "nodes"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = "1.40.0"
base64 = "0.13.0"
curve25519-dalek = {version = "3.2", features=["serde"] }
rand = "0.7"
sha2 = "0.9"
reqwest = {version = "0.12.7", features=["json"]}
