[package]
name = "bbs_plus_tss"
version = "0.1.0"
edition = "2021"

[lib]
name = "bbs_plus_tss"
path = "src/lib.rs"

[dependencies]
rand = "0.8.5"
curve25519-dalek = "4.1.3"
serde = "1.0.210"
serde_json = "1.0.128"
rdkafka = "0.36.2"
sha2 = "0.10.8"
pairing = "0.23"
bls12_381 = "0.8.0"
bitvec = "1.0.1"
funty = "2.0.0"
ff = "0.13.0"
group ="0.13.0"

[dev-dependencies]
proptest = "1.0"
