[package]
name = "dcsm_bbs_plus"
version = "0.1.0"
edition = "2021"

[lib]
name = "dcsm_bbs_plus"
path = "src/lib.rs"

[dependencies]
bls12_381 = "0.8"
curve25519-dalek = "4.1.3"
rand = "0.8.5"
rand_core = "0.6.4"
serde = { version = "1.0.210", features = ["derive"] }
threshold_crypto = "0.4.0"  # Add this crate to handle secret sharing
ff = "0.13.0"
sha2 = "0.10.8"
shamirsecretsharing = "0.1.5"
subtle = "2.6"
typenum ="1.17.0"
generic-array = "1.1.0"
group ="0.13.0"
neptune = "13.0.0"
ark-bn254 = "0.4.0"
ark-ff = "0.4.2"
env_logger = "0.11.5"
log = "0.4.22"
tracing-subscriber = "0.3.18"
ark-bls12-381 = "0.4.0"
ark-ec = "0.4.2"
ark-std = "0.4.0"
