[package]
name = "nodes"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
base64 = "0.13.0"
curve25519-dalek = {version = "3.2", features=["serde"] }
rand = { version = "0.7", features = ["std"] }
sha2 = "0.9"
reqwest = {version = "0.12.7", features=["json"]}
rdkafka = { version = "0.28", features = ["tokio"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"